* Fix: Warning: Undefined array key "chronik_seite" in Helper:17 -> Ausgabe einer Fehlermeldung, wenn Chronikseite nicht eingestellt ist * Delete: tl_module.jumpTo entfernt, da die Chronikseite global festgelegt wird * Fix: Anpassungen PHP 8 wegen undefinierter Variablen * Delete: ALIAS_CHRONIK und Array mit den vordefinierten Zeiträumen * Change: style.css für das Backend verbessert

--- a/src/Resources/public/style.css
+++ b/src/Resources/public/style.css
@@ -23,23 +23,3 @@ td.tl_right_nowrap {
 .mark_links a {
 	text-decoration      : underline
 }
-
-.limit_toggler button {
-	line-height          : 24px;
-}
-
-.limit_toggler button span {
-	width                : 20px;
-	height               : 24px;
-	display              : block;
-	font-size            : 0;
-}
-
-.limit_toggler button.unselectable span {
-	background           : url(/system/themes/flexible/images/expand.gif) no-repeat;
-}
-
-/*
-//http://www.schachbund.de/system/themes/flexible/images/collapse.gif
-//http://www.schachbund.de/system/themes/flexible/images/expand.gif
-*/
